# assignment-interview

./: README.md
backend/: .gitignore  dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py  requirements.txt
backend/app/core/: config.py  security.py
backend/app/db/: db.py
backend/app/models/: tasks.py  user.py
backend/app/routes/: auth.py  tasks.py
backend/app/static/: app.js  dashboard.html  index.html  styles.css
frontend/: app.js  dashboard.html  index.html
