[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi>=0.121.2",
    "jose>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.12.4",
    "pymongo>=4.15.4",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
